# ARCS-PUBLIC

./: README.md  README_cmake.md
ARCS6/: ARCS6.code-workspace
ARCS6/lib/: ARCS_LIB.cmake  ActivationFunctions.cc  ActivationFunctions.hh  ArcTangent.cc  ArcTangent.hh  BatchProcessor.cc  BatchProcessor.hh  CPUSettings.cc  CPUSettings.hh  ChirpGenerator.cc  ChirpGenerator.hh  ClassBase.cc  ClassBase.hh  ClassTemplate.cc  ClassTemplate.hh  CsvManipulator.cc  CsvManipulator.hh  CuiPlot.cc  CuiPlot.hh  CurrencyDatasets.cc  CurrencyDatasets.hh  DataStorage.cc  DataStorage.hh  DeadBand.cc  DeadBand.hh  Differentiator.cc  Differentiator.hh  Differentiator2.cc  Differentiator2.hh  Discret.cc  Discret.hh  DisturbanceObsrv.cc  DisturbanceObsrv.hh  FRAgenerator.cc  FRAgenerator.hh  FeedforwardNeuralNet3.cc  FeedforwardNeuralNet3.hh  FixedAverage.cc  FixedAverage.hh  FrameFontSmall.cc  (+142 more)
ARCS6/mod/: Makefile
ARCS6/mod/ARCSkernel/: ARCSkernel.c  Makefile  StopModule.sh
ARCS6/mod/pcie_ac01/: Makefile  PCIeReconfig.sh  StartModule.sh  pcie_ac01.c
ARCS6/mod/pcie_ac01/.tmp_versions/: pcie_ac01.mod
ARCS6/robot/ZFA01/CurrentCtrl/: ConstParams.cc  ControlFunctions.cc  Makefile
ARCS6/robot/general/BaseCtrl/: CMakeLists.txt  EventLog.txt  Makefile
ARCS6/robot/general/BaseCtrl/m/: GraphPlotter1ov1.m  GraphPlotter2.m  GraphPlotter3ov3.m  GraphPlotter6.m  GraphPlotterXYZRPY.m
ARCS6/robot/sample/: ReadMe.txt
ARCS6/src/: ARCS_SRC.cmake  ControlFunctions.hh  DataMemory.cc  DataMemory.hh  GraphPlot.cc  GraphPlot.hh  InterfaceFunctions.cc  Makefile  Makefile.depend  ScreenParams.cc  ScreenParams.hh  arcs.cppcheck
ARCS6/src/maintenance/: Makefile
ARCS6/sys/: ARCS.cc  ARCS.cppcheck  ARCS_SYS.cmake  ARCSassert.cc  ARCSassert.hh  ARCScommon.cc  ARCScommon.hh  ARCSeventlog.cc  ARCSeventlog.hh  ARCSprint.cc  ARCSprint.hh  ARCSscreen.cc  ARCSscreen.hh  ARCSthread.cc  ARCSthread.hh  License.txt  Makefile  Makefile.depend  ReadMe.txt
(+99 files in other folders)
